<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_budget_bg"
    tools:context=".ui.budgets.managebudget.EditBudgetFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_edit_budget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:fontFamily="@font/nunitosans_semibold_pf"
        android:padding="@dimen/_4dp"
        android:text="@string/edit_budget"
        android:textAlignment="textStart"
        android:textColor="@color/pf_blue_color"
        android:textSize="@dimen/_16_sp_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tIlAmountEditBudget"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:hint="@string/amount"
        app:boxCornerRadiusBottomEnd="@dimen/_8dp"
        app:boxCornerRadiusBottomStart="@dimen/_8dp"
        app:boxCornerRadiusTopEnd="@dimen/_8dp"
        app:boxCornerRadiusTopStart="@dimen/_8dp"
        app:boxStrokeColor="@color/pf_black"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/pf_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_budget">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_regular_pf"
            android:hint="Enter Amount"
            android:inputType="number"
            android:minHeight="@dimen/_48dp"
            android:textSize="@dimen/_14_sp_text_size" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditBudget"
        app:layout_constraintTop_toBottomOf="@id/tIlAmountEditBudget"
        android:layout_width="0dp"
        android:paddingTop="@dimen/_2dp"
        android:paddingBottom="@dimen/_2dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:backgroundTint="@color/pf_light_blue"
        android:text="@string/continue_btn"
        app:cornerRadius="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="@dimen/_32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>